Medium level finished

--- a/Final-Project/html basic/chromosomeLength.html
+++ b/Final-Project/html basic/chromosomeLength.html
@@ -6,5 +6,6 @@
 </head>
 <body style="background-color: darkmagenta;">
     <p>The length of the chosen chromosome is: {{context.chromo_length}} </p>
+    <a href="/">Main Page</a>
 </body>
 </html>
