--- a/Final-Project/html medium/geneInfo.html
+++ b/Final-Project/html medium/geneInfo.html
@@ -5,10 +5,10 @@
     <title>Gene Info</title>
 </head>
 <body style="background-color: lightpink;">
-    <p>The gene {{context.gene}}, with id {{context.id}}, is {{context.chrom_name}}, with number {{context.chrom_number}}</p>
-    <p>The coord are: </p>
-    <p>starts at: {{context.start_coord}}</p>
-    <p>ends at: {{context.end_coord}}</p>
+    <p>The gene {{context.gene}}, with id {{context.id}}, is {{context.name_chromosome}}, with number {{context.number_chromosome}}</p>
+    <p>The location is: </p>
+    <p>starts at: {{context.start_coordinates}}</p>
+    <p>ends at: {{context.end_coordinates}}</p>
     <p>The gene's length is: {{context.gene_length[0]}}</p>
     <a href="/">Main Page</a>
 </body>
