--- a/Final-Project/html medium/geneCalc.html
+++ b/Final-Project/html medium/geneCalc.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
     <title>Gene Calculus</title>
 </head>
-<body style="background-color: lightgoldenrodyellow;">
-    <p>The length of {{context.gene}} is: {{context.length[0}}</p>
-    <p>A: {{context.A[0]}}, ({{context.A[1]}}5)</p>
-    <p>C: {{context.C[0]}}, ({{context.C[1]}}5)</p>
-    <p>G: {{context.G[0]}}, ({{context.G[1]}}5)</p>
-    <p>T: {{context.T[0]}}, ({{context.T[1]}}5)</p>
+<body style="background-color: chartreuse;">
+    <p>The length of {{context.gene}} is: {{context.length[0]}}</p>
+    <p>A: {{context.A[0]}}, ({{context.A[1]}}%)</p>
+    <p>C: {{context.C[0]}}, ({{context.C[1]}}%)</p>
+    <p>G: {{context.G[0]}}, ({{context.G[1]}}%)</p>
+    <p>T: {{context.T[0]}}, ({{context.T[1]}}%)</p>
     <a href="/">Main Page</a>
 </body>
 </html>
